# dilithium-ml-dsa-avx2-rust

./: .gitignore  README.md  dilithium_c_to_rust_tracker.csv
.github/workflows/: ci.yml
ref/test/: test_dilithium.c  test_speed.c  test_vectors.c
rust/: AUTHORS.md  Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
rust/crates/cli/: Cargo.toml
rust/crates/cli/src/: main.rs
rust/crates/dilithium/: CONSTANT_TIME_AUDIT.md  Cargo.toml  build.rs
rust/crates/dilithium/benches/: bench_dilithium.rs
rust/crates/dilithium/src/: api.rs  config.rs  fips202.rs  lib.rs  nistkat_rng.rs  ntt.rs  packing.rs  params.rs  poly.rs  polyvec.rs  randombytes.rs  reduce.rs  rounding.rs  sign.rs  symmetric.rs
rust/crates/dilithium/src/avx2/: mod.rs
rust/crates/dilithium/tests/: interop.rs  nistkat.rs  test_dilithium.rs  test_mul.rs  test_vectors.rs
